fix(style): prevent cutting off of bottom of decline bottom when chrome zooms

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -32,6 +32,11 @@ label {
 	@media (min-width: $screen-lg-min) {
 		width: $container-lg;
 	}
+
+	// prevent rendering bug when chrome zooms around...
+	.btn-toolbar {
+		margin-bottom: 1px;
+	}
 }
 
 [piq-page]{
